# miniverse

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ISSUES.md  README.md  plan.md  pyproject.toml
.cursor/rules/: architecture-patterns.mdc  data-modeling.mdc  documentation.mdc  example-guidelines.mdc  formatting-style.mdc  minimal-changes.mdc  no-emojis.mdc  pr-contribution-standards.mdc  testing-standards.mdc  use-changelog.mdc  uv-package-management.mdc
docs/: LOCAL_LLMS.md  PROMPTS.md  README.md  RESEARCH.md  USAGE.md  understanding_cognition.md
docs/architecture/: cognition.md  environment.md
docs/debugging/: BUGS_FOUND.md  DEBUG_LLM_FINDINGS.md  OUTSTANDING_ISSUES.md  README.md  ROOT_CAUSE_ANALYSIS.md  SESSION_2025-10-16_SUMMARY.md  SESSION_SUMMARY.md  STATUS.md
docs/research/: README.md
examples/: README.md  __init__.py  grid_movement.ipynb  requirements-notebook.txt  requirements.txt  tutorial.ipynb  valentines_party.ipynb  welcome.ipynb
examples/behavior_is_all_you_need/: FIXES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  cognition.py  emotion.py  needs.py  personality.py  rules.py  run.py  scenario.json
examples/hospital/: README.md  hospital_rules.py  run.py  scenario.json
examples/icu/: README.md  detailed_icu_report.txt  icu_4hour_simulation.txt  icu_4hr_simulation.txt  icu_report.txt  run.py  test_async.txt  test_comments.txt  test_llm_comments.txt  test_llm_final.txt
examples/scenarios/: stanford.json
examples/smallville/: README.md  valentines_party.ipynb  valentines_party.py
examples/snake/: run.py  (+1 more)
miniverse/: __init__.py  config.py  llm_calls.py  llm_utils.py  local_llm.py  logging_utils.py  memory.py  orchestrator.py  perception.py  persistence.py  scenario.py  schemas.py  simulation_rules.py
tests/: conftest.py  test_agent_prompts_injection.py  test_cognition_flow.py  test_communication_flow.py  test_environment_helpers.py  test_information_diffusion.py  test_llm_calls.py  test_llm_executor_api.py  test_llm_integration.py  test_llm_utils.py  test_local_llm.py  test_logging_tags.py  test_memory_retrieval.py  test_orchestrator.py  test_perception.py  test_persistence.py  test_renderer_placeholders.py  test_scenario_loader.py  test_schemas.py  test_world_update_modes.py
(+42 files in other folders)
