[project]
name = "miniverse"
version = "0.1.0"
description = "LLM-driven agent-based simulation system"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mirascope>=1.18.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "asyncpg>=0.29.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
