[project]
name = "miniverse"
version = "0.2.0"
description = "Build generative agent simulations with deterministic physics and emergent behavior"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kenneth F. Cavanagh", email = "ken@agency42.co"}
]
keywords = ["llm", "agents", "simulation", "ai", "multi-agent", "generative-agents", "stanford"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/miniverse-ai/miniverse"
Documentation = "https://github.com/miniverse-ai/miniverse/blob/main/docs/README.md"
Repository = "https://github.com/miniverse-ai/miniverse"
Issues = "https://github.com/miniverse-ai/miniverse/issues"
Changelog = "https://github.com/miniverse-ai/miniverse/blob/main/CHANGELOG.md"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "mirascope>=1.18.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "asyncpg>=0.29.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
